# tnn-arshjul-sync

./: .gitignore  README.md  config.example.yaml  pyproject.toml  schema.json
.github/workflows/: sync.yml
assets/: privacy.html  support.html
docs/superpowers/plans/: 2026-07-07-tnn-arshjul-sync.md
scripts/: dump_events.py  dump_groups.py
tests/: test_config.py  test_labels.py  test_main_guard.py  test_parse_event.py  test_spond_client.py  test_transform.py  test_validate.py
tnn_sync/: config.py  labels.py  main.py  models.py  spond_client.py  transform.py  validate.py
