[project]
name = "tnn-arshjul-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["spond>=1.0", "jsonschema>=4.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tnn_sync"]
